--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,126 @@ body {
   color: #333;
 
 }
+
+
+
+
+
+.button {
+  font: 700 15px consolas; /* Half the original font size */
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px 30px; /* Half the original padding */
+  position: relative;
+  overflow: hidden;
+  border-radius: 50px;
+  transition: 0.2s;
+  transform: scale(1); /* Return to original scale */
+}
+
+.button span {
+  position: relative;
+  z-index: 0;
+  color: #fff;
+}
+
+.button .liquid {
+  position: absolute;
+  top: -50px; /* Half the original value */
+  left: 0;
+  width: 100%;
+  height: 100px; /* Half the original height */
+  background: red;
+  box-shadow:  red; /* Adjusted */
+  z-index: -1;
+  transition: 0.6s;
+}
+
+button .liquid2 {
+  position: absolute;
+  top: -50px; /* Half the original value */
+  left: 0;
+  width: 100%;
+  height: 100px; /* Half the original height */
+  background: rgb(59 130 246);
+  box-shadow:  red; /* Adjusted */
+  z-index: -1;
+  transition: 0.6s;
+}
+
+.button .liquid::after,
+.button .liquid::before {
+  position: absolute;
+  content: "";
+  width: 200%;
+  height: 300%;
+  top: 0;
+  left: 0;
+  transform: translate(-25%, -75%);
+}
+
+
+.button .liquid2::after,
+.button .liquid2::before {
+  position: absolute;
+  content: "";
+  width: 200%;
+  height: 300%;
+  top: 0;
+  left: 0;
+  transform: translate(-25%, -75%);
+}
+
+.button .liquid::after {
+  border-radius: 45%;
+  background: rgba(20, 20, 20, 1);
+  box-shadow: 0 0 5px 2.5px #7293ff, inset 0 0 2.5px #7293ff; /* Adjusted */
+  animation: animate 5s linear infinite;
+  opacity: 0.8;
+}
+
+.button .liquid2::after {
+  border-radius: 45%;
+  background: rgba(20, 20, 20, 1);
+  box-shadow: 0 0 5px 2.5px #7293ff, inset 0 0 2.5px #7293ff; /* Adjusted */
+  animation: animate 5s linear infinite;
+  opacity: 0.8;
+}
+
+.button .liquid::before {
+  border-radius: 40%;
+  box-shadow: 0 0 5px rgba(26, 26, 26, 0.5),
+      inset 0 0 2.5px rgba(26, 26, 26, 0.5); /* Adjusted */
+  background: rgba(26, 26, 26, 0.5);
+  animation: animate 7s linear infinite;
+}
+
+.button .liquid2::before {
+  border-radius: 40%;
+  box-shadow: 0 0 5px rgba(26, 26, 26, 0.5),
+      inset 0 0 2.5px rgba(26, 26, 26, 0.5); /* Adjusted */
+  background: rgba(26, 26, 26, 0.5);
+  animation: animate 7s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+      transform: translate(-25%, -75%) rotate(0);
+  }
+  100% {
+      transform: translate(-25%, -75%) rotate(360deg);
+  }
+}
+
+.button:hover .liquid {
+  top: -60px; /* Half the original value */
+}
+.button:hover .liquid2 {
+  top: -60px; /* Half the original value */
+}
+
+.button:hover {
+  box-shadow: 0 0 2.5px #7293ff, inset 0 0 2.5px #7293ff; /* Adjusted */
+  transition-delay: 0.1s; /* Adjusted */
+}
