--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
 
 
 
-
+/* Liquid animation */
 
 .button {
   color: #fff;
@@ -39,7 +39,7 @@ body {
   left: 0;
   width: 100%;
   height: 100px; /* Half the original height */
-  background: red;
+  background: rgb(239 68 68);
   box-shadow:  red; /* Adjusted */
   z-index: -1;
   transition: 0.6s;
@@ -133,14 +133,41 @@ button .liquid2 {
   transition-delay: 0.1s; /* Adjusted */
 }
 
-
+/* Blinking animation */
 @keyframes blink {
   0%, 100% { box-shadow: 0 0 50px 5px blue; }
-  50% { box-shadow: 0 0 50px 5px red; }
+  50% { box-shadow: 0 0 50px 10px red; }
 }
 
-.blinking {
+.blink {
 
   
   animation: blink 5s infinite ease-in-out;
+}
+
+
+
+@keyframes blink-red {
+  0%, 100% { box-shadow: 0 0 20px 3px red; }
+  50% { box-shadow: 0 0 5px red; }
+}
+
+@keyframes blink-blue {
+  0%, 100% { box-shadow: 0 0 20px 3px blue; }
+  50% { box-shadow: 0 0 5px blue; }
+}
+
+
+.blink-red {
+  animation: blink-red 5s infinite ease-in-out;
+}
+
+
+.blink-blue {
+  animation: blink-blue 5s infinite ease-in-out;
+}
+
+
+.dark .blink-red {
+  animation: blink-red 5s infinite ease-in-out;
 }
